<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--Hard coded connection settings for now. Will need to be set dynamically later-->

    <EditTextPreference android:key="@string/server_uri_label"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:title="@string/server_uri_label"
        android:defaultValue="@string/server_uri"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:singleLine="true"/>

    <EditTextPreference android:key="@string/topic_label"
        android:title="@string/topic_label"
        android:defaultValue="@string/topic_name"
        android:capitalize="words"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textCapWords"/>

    <EditTextPreference android:key="@string/client_id_label"
        android:title="@string/client_id_label"
        android:capitalize="words"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textCapWords"/>
</PreferenceScreen>
